# agent-corex

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_DEPLOYMENT_STATUS.md  DASHBOARD_SETUP_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GET_STARTED.md  GITHUB_ACTIONS_SETUP.md  INSTALL.md  LICENSE  LOCAL_TESTING_GUIDE.md  MANIFEST.in  MCP_SETUP_GUIDE.md  OPEN_SOURCE_CHECKLIST.md  OSS_READY.md  PYPI_PUBLISHING_GUIDE.md  PYPI_SETUP.md  QUICKSTART.md  README.md  README_VALIDATION_COMPLETE.md  REFACTOR_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  SEO_IMPLEMENTATION.md  SITEMAP_GUIDE.md  TEST_RESULTS_v2.2.0.md  TOOL_INTERFACE_REFACTOR.md  WHAT_WAS_ACTUALLY_BROKEN.md  agent-core.code-workspace  complete_project_context.md  implementation and testing.md  install-curl.sh  install.bat  install.sh  nextFeatures.MD  (+6 more)
.agent-memory/: CLAUDE.md  architecture.md  repo.md
.agent-memory/changes/: hotspots.md
.agent-memory/features/: api.md
.agent-memory/metadata/: confidence.json  manifest.json  sources.json
.agent-memory/modules/: apps-api.md  packages-mcp_server.md  packages-retrieval.md  packages-tools.md  packages-vector.md
.agent-memory/rules/: conventions.md  safe-boundaries.md
.github/workflows/: build-binaries.yml  publish.yml  release.yml  test-and-release.yml  test.yml  update-homebrew-tap.yml
agent_core/: __init__.py  capabilities.py  client.py  env_manager.py  local_config.py  mcp_config_generator.py  pack_manager.py  skill_installer.py  skill_parser.py
agent_core/api/: main.py
agent_core/cli/: main.py
agent_core/config_adapters/: __init__.py  base.py  claude.py  cursor.py  vscode.py
agent_core/detectors/: __init__.py  base.py  claude.py  cursor.py  vscode.py
agent_core/gateway/: __init__.py  auth_middleware.py  backend_router.py  capability_provider.py  gateway_server.py  mcp_recommender.py  tool_executor.py  tool_interface.py  tool_router.py  user_mcp_tracker.py
agent_core/input_abstraction/: __init__.py  classifier.py  models.py  registry.py  resolver.py
agent_core/mcp/: __init__.py  client.py  local_store.py  manager.py  mcp_registry.json  registry.py  transport.py
agent_core/prompts/: system_prompt_v3.md
agent_core/retrieval/: embeddings.py  hybrid_scorer.py  ranker.py  scorer.py
agent_core/tools/: registry.py
agent_core/tools/mcp/: mcp_client.py  mcp_loader.py  mcp_manager.py
agent_core/tools/observability/: __init__.py  tool_selection_tracker.py
agent_core/uvx/: __init__.py  executor.py  mcp_manager.py  pack_manager.py  registry.py
agent_corex/: __init__.py
agent_corex/api/: main.py
agent_corex/cli/: __init__.py
agent_corex/retrieval/: scorer.py
apps/api/: README.md  main.py
config/: README.md  mcp.json  mcp_enterprise.json
context/: change_log.md  current_state.md  features.md  file_index.md  main.md  repo_map.md
docs/: 404.html  BingSiteAuth.xml  TESTING_CHECKLIST.md  _config.yml  api.md  dashboard-guide.md  dashboard.css  dashboard.html  dashboard.js  deployment.md  index.md  installation.md  mcp-setup.md  quickstart.md  robots.txt  vibe_coding_local_setup.md
docs/_includes/: footer.html  header.html  nav.html  sidebar.html
docs/_layouts/: default.html  page.html
docs/assets/css/: style.scss
examples/: README.md  basic_usage.py  custom_server.skill.md  deploy_pack.skill.md  vibe_coding.skill.md
homebrew/Formula/: agent-corex.rb
infrastructure/: container.py
scripts/: test_v2.py
tests/: README.md  test_api.py  test_capabilities.py  test_cli.py  test_client.py  test_gateway.py  test_local_store.py  test_mcp.py  test_mcp_client.py  test_mcp_manager.py  test_retrieval.py  test_tool_flow_integration.py  test_tool_interface.py
