[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-corex"
version = "1.2.2"
description = "Fast, accurate MCP tool retrieval engine for LLMs with semantic search"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ankit Agarwal", email = "ankitagarwalpro@gmail.com"}
]
keywords = [
    "mcp",
    "tool-retrieval",
    "semantic-search",
    "embeddings",
    "llm",
    "ai",
    "ranking"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.21.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
    "pre-commit>=3.0.0"
]

redis = [
    "redis>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/ankitpro/agent-corex"
Documentation = "https://ankitpro.github.io/agent-corex/"
Repository = "https://github.com/ankitpro/agent-corex.git"
"Bug Tracker" = "https://github.com/ankitpro/agent-corex/issues"
Changelog = "https://github.com/ankitpro/agent-corex/releases"
"Author Portfolio" = "https://ankitpro.github.io/portfolio"
"Author LinkedIn" = "https://www.linkedin.com/in/ankitagarwal94"

[project.scripts]
agent-corex = "agent_core.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=agent_core --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)
