[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-corex"
version = "4.4.4"
description = "Thin CLI + MCP client for Agent-CoreX — execute any task with a single query"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ankit Agarwal", email = "ankitagarwalpro@gmail.com"}
]
keywords = [
    "mcp",
    "ai-agent",
    "cli",
    "llm",
    "agent-corex",
    "tool-execution",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.30.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ankitpro/agent-corex"
Documentation = "https://github.com/ankitpro/agent-corex#readme"
Repository = "https://github.com/ankitpro/agent-corex.git"
"Bug Tracker" = "https://github.com/ankitpro/agent-corex/issues"
Changelog = "https://github.com/ankitpro/agent-corex/releases"

[project.scripts]
agent-corex = "agent_core.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["py.typed", "mcp/mcp_registry.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=agent_core --cov-report=term-missing"
